--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -114,3 +114,19 @@ title={Pehmokäynnistinopas},
 author={ABB},
 url={https://library.e.abb.com/public/d11f99611045fef8c125796e00473a8a/OPAS Pehmokaynnistys 1FI12_01.pdf}
 }
+
+@misc{Latomaki,
+  author = "Latomäki, Janne",
+  organization = "Jyväskylän ammattikorkeakoulu",
+  title = "Maalämpöpumpun monitorointi ja etäohjaus",
+  year = "2019",
+}
+
+@misc{Harsia,
+author = {Harsia, Pirkko and Honkapuro, Samuli},
+keywords = {sähköjärjestelmät},
+language = {fin},
+organization = {Tampereen ammattikorkeakoulu},
+publisher = {Sähköinfo Oy},
+title = {Kysyntäjousto edistää uusiutuvaa sähköntuotantoa},
+}
