--- a/main.tex
+++ b/main.tex
@@ -109,7 +109,7 @@
 \subtitle{Luonnos: versio 3}
 
 % The author name.
-\author{Ilmari Marttila ja Niko Kangasniemi}
+\author{Ilmari Marttila \\ Niko Kangasniemi}
 
 % The examiner information.
 % If your work has multiple examiners, replace with
@@ -140,11 +140,7 @@
 
 %\preface{tex/alkusanat.tex}{Tampereella}
 
-%%%%% Table of contents.
-
 \tableofcontents
-
-%%%%% Lists of figures, tables, listings and terms.
 
 \listoffigures
 %\listoftables
@@ -153,16 +149,10 @@
 
 %\glossary
 
-%%%%% MAIN MATTER %%%%%
-
 \mainmatter
-\chapter*{Huomioita}
-\label{alkusanat}
-\input{tex/alkusanat.tex}
-
-% \chapter*{Suunnitelma}
-% \label{Suunnitelma}
-% \input{tex/suunnitelma.tex}
+% \chapter*{Huomioita}
+% \label{alkusanat}
+% \input{tex/alkusanat.tex}
 
 \chapter{Johdanto}
 \label{ch:johdanto}
@@ -186,7 +176,6 @@
 
 \printbibliography[heading=bibintoc]
 
-%%%%% Appendices.
 
 %\begin{appendices}
 
