--- a/tex/pumput_sahkon_kayttajina.tex
+++ b/tex/pumput_sahkon_kayttajina.tex
@@ -45,11 +45,11 @@ Lämpöpumppuja käytetään pääasiassa kiinteistöjen lämmitykseen. Toinen k
 \section{Taajuusmuuttajakäytöt}
   Nykyaikainen ratkaisu lämpöpumpujen kompressorien käyttämiseen on taajuusmuuttaja. Taajuusmuuttaja koostuu tasasuuntaajasta ja ohjatusta vaihtosuuntaajasta, jolla saadaan tuotettua halutun suuruista ja taajuista vaihtojännitettä. Käynnistettäessä kompressoria aloitetaan moottorin syöttäminen matalataajuisella vaihtojännitteellä. Moottorin käyntinopeuden noustessa kohti haluttua arvoa, nostetaan samalla jännitteen taajuutta niin, että verkosta otettu teho pysyy suurin piirtein vakiona pyörimisnopeudesta riippumatta.
 
-  Taajuusmuuttajan käytöllä saavutetaan useita hyötyjä. Käynnistysvirtapiikkien poistamisen lisäksi taajuusmuuttajalla voidaan myöskin säädellä kompressorin tuottamaa tehoa. Tehon säätäminen mahdollistaa pidemmät käyntijaksot ja tasaisemman tehonkulutuksen, mutta ei kuitenkaan vähennä lämpöpumpusta saatavaa maksimitehoa\parencite{lahde}. Myöskin pienempien energiamäärien tuottaminen voidaan toteuttaa järkevästi kiivaimman lämmityskauden ulkopuolella.
+  Taajuusmuuttajan käytöllä saavutetaan useita hyötyjä. Käynnistysvirtapiikkien poistamisen lisäksi taajuusmuuttajalla voidaan myöskin säädellä kompressorin tuottamaa tehoa. Tehon säätäminen mahdollistaa pidemmät käyntijaksot ja tasaisemman tehonkulutuksen, mutta ei kuitenkaan vähennä lämpöpumpusta saatavaa maksimitehoa. Myöskin pienempien energiamäärien tuottaminen voidaan toteuttaa järkevästi kiivaimman lämmityskauden ulkopuolella.
 
   Verkon näkökulmasta taajuusmuuttaja näyttäytyy lähes resistiivisenä kuormana, eikä sen loistehon kulutus ole yhtä suuri kuin suoraan verkkoon kytketyllä oikosulkumoottorilla. Tämä osaltaan vähentää verkon kuormitusta ja laskee jännitehäviöitä. Taajuusmuuttajan verkkoon aiheuttamat jännitehäiriöt riippuvat paljon taajuusmuuttajasta, sen laadusta ja koosta.
 
 \section{Resistiivinen kuorma}
-  Moottorikuormien lisäksi lämpöpumppujen yhteyteen asennetaan usein lämpövastuksia. Mikäli kyseessä on osatehomitoitettu lämpöpumppu, vastuksia käytetään suurimman energiatarpeen aikana, jolloin lämpöpumppu itsessään ei kykene tuottamaan kaikkea tarvittavaa energiaa. Lämpövastuksia käytetään myöskin höyrystimeen kertyneen jään ja huurteen poistoon\parencite{lahde}.
+  Moottorikuormien lisäksi lämpöpumppujen yhteyteen asennetaan usein lämpövastuksia. Mikäli kyseessä on osatehomitoitettu lämpöpumppu, vastuksia käytetään suurimman energiatarpeen aikana, jolloin lämpöpumppu itsessään ei kykene tuottamaan kaikkea tarvittavaa energiaa. Lämpövastuksia käytetään myöskin höyrystimeen kertyneen jään ja huurteen poistoon.
 
   Lämpöpumpuissa kuluu sähköä myös muihin tarkoituksiin kuin suoraan energiantuotantoon. Automatiikan, ohjauksen ja sisä- ja ulkoyksiköiden puhaltimien kuluttama energia on kuitenkin vähäistä verrattuna muuhun energiankulutukseen.
