--- a/tex/sovellukset.tex
+++ b/tex/sovellukset.tex
@@ -14,7 +14,7 @@ Lämpöpumppujen kommunikaatiorajapintoja voidaan hyödyntää useaan eri tarkoi
   \end{itemize} \parencite{Latomaki}
   Esimerkiksi lämpöpumpun käyttäjän ollessa poissa kotoa, pystyy hän siitä huolimatta varmistamaan kotinsa lämpötilan ja järjestelmien toimivuuden. Myöskin virhetilanteissa pystytään reagoimaan nopeammin.
 
-  Kun lämpöpumppua pystytään monitoroinnin lisäksi myös ohjaamaan etänä, puhutaan etäohjauksesta. Toisin kuin pelkästä monitoroinnista, lämpöpumpun etäohjauksesta saattaa olla enemmän käytännön hyötyä ,yös omakotitaloasujalle. Etäohjauksella voidaan saavuttaa energian säästöä eri tavoilla. Etäohjaus mahdollistaa muunmuassa matalamman sisälämpötilan ylläpitämisen asukkaiden ollessa poissa, minkä jälkeen voidaan etäohjauksella nostaa asunnon lämpötilaa juuri ennen asukkaiden paluuta kotiin. Kesällä sama periaate pätee jäähdytykseen, mikäli käytettävä lämpöpumppu toimii myös jäähdyttävänä järjestelmänä. Etäohjaussovelluksesta on myöskin helpompaa tehdä intuitiivinen käyttää, koska käyttöliittymä voidaan tuoda kiinteästi lämpöpumpun yhteyteen asennetuista käyttöliittymistä käyttäjän omalle laitteelle.
+  Kun lämpöpumppua pystytään monitoroinnin lisäksi myös ohjaamaan etänä, puhutaan etäohjauksesta. Toisin kuin pelkästä monitoroinnista, lämpöpumpun etäohjauksesta saattaa olla enemmän käytännön hyötyä myös omakotitaloasujalle. Etäohjauksella voidaan saavuttaa energian säästöä eri tavoilla. Etäohjaus mahdollistaa muunmuassa matalamman sisälämpötilan ylläpitämisen asukkaiden ollessa poissa, minkä jälkeen voidaan etäohjauksella nostaa asunnon lämpötilaa juuri ennen asukkaiden paluuta kotiin. Kesällä sama periaate pätee jäähdytykseen, mikäli käytettävä lämpöpumppu toimii myös jäähdyttävänä järjestelmänä. Etäohjaussovelluksesta on myöskin helpompaa tehdä intuitiivinen käyttää, koska käyttöliittymä voidaan tuoda kiinteästi lämpöpumpun yhteyteen asennetuista käyttöliittymistä käyttäjän omalle laitteelle.
 
   kommunikointi lämpöpumpun ja asiakkaan päätelaitteen, joka voi olla esimerkiksi puhelin tai tietokone, voi tapahtua monella erilaisella tavalla. Monet lämpöpumppuvalmistajat \marginpar{etsi joku} tarjoavat lämpöpumppuihinsa lisäpalveluna etäohjaustoiminnallisuutta, joka näyttäytyy käyttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. \marginpar{taloautomaatiokappale} Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suurempaa perehtymistä tai asiantuntemusta.
 
@@ -24,11 +24,30 @@ Lämpöpumppujen kommunikaatiorajapintoja voidaan hyödyntää useaan eri tarkoi
 
 \section{kysyntäjousto}
 
-  Normaalissa keskitetyssä sähköenergiajärjestelmässä sähkötehon kulutus vaihtelee muunmuassa vuodenajan, vuorokaudenajan ja sään mukaan. Myös valmistavan teollisuuden prosessien tila saattaa vaikuttaa merkittävästi järjestelmän tehonkulutukseen.
+  Normaalissa keskitetyssä sähköenergiajärjestelmässä sähkötehon kulutus vaihtelee muunmuassa vuodenajan, vuorokaudenajan ja sään mukaan. Myös valmistavan suurteollisuuden prosessien tila saattaa vaikuttaa merkittävästi järjestelmän tehonkulutukseen. Sähköverkosta otetun ja siihen syötetyn tehon pitää jatkuvsti olla yhtä suuret, minkä takia tuotantotehoa pitää säätää. Perinteisessä järjestelmässä tehonkulutuksen muutoksia ennakoidaan ja tehontuotantoa säädellään ajamalla esimerkiksi lauhde- ja CHP-voimaloita tietyn suunnitelman mukaan. Niin kutsutut pohjavoimalaitokset, kuten esimerkiksi ydinvoialaitoset ja osa lauhdevoimaloista \marginpar{tarkasta tää}, taas ajavat käytännössä koko ajan nimellistehollaan tuottaen suurimman osan kulutetusta energiasta \marginpar{tarkka lukema ois kiva}. Myöskin uusiutuvaa energiaa, kuten tuuli- ja aurinkovoimaa ajetaan käytännössä myös jatkuvasti nimellistehollaan. Pohjavoimalaitoksille tyypillistä on polttoaineen halpa hinta, ja täten kohtuullisen pienet muuttuvat kustannukset investointikustannusten ollessa niihin verrattuna suuria.
 
+  Vaikka lauhdevoimalaitoksia käytetään säätötehona, niitä ei kannata kuitenkaan käyttää tehonkulutuksen lyhytaikaisten vaihteluiden kattamiseen. Normaalissa laudevoimalaitoksessa tehonsäätöä ei saada suoritettua tarpeeksi nopeasti niin, että se olisi energiataloudellista\footnote{etsippä lähe ja minuuttimäärät ja selvitä käytetäänkö tähän tarkoitukseen}. Suomessa sekuntitasolla tapahtuva tehotasapainon säätö tapahtuu pääosin vesivoimalla, sillä vesimvoiman tehontuottoa kyetään säätämään lähes reaaliajassa säätelemällä veden virtausta turbiineille. Sähköenergiajärejestelmässä esiintyvä tehoepätasapaino aiheuttaa muutoksia jännitteen taajuuteen. Ylituotannon aikana voimaloiden geeraattoreiden pyörimistä vastustava momentti pienenee, jolloin pyörimisnopeus ja täten jännitteen taajuus pääsee kasvamaan. Alituotannon kohdalla tilanne on päinvastainen. Jännitteen taajuutta seuraamalla kyetään ohjaamaan säätövoiman tuotantoa lähes reaaliajassa. Kantaverkkoyhtiö Fingrid myöskin edellyttää voimalaitoksilta taajuusohjattua häiriöreserviä,\marginpar{Ihan tosi? onko oikea termi} joka on kyettävä ottamaan käyttöön, mikäli sähköverkon taajuus eroaa \SI{0.5}{\hertz} tai enemmän nimellistaajuudesta \SI{50}{\hertz}.
 
+  Uusiutuvien energialähteden käyttö sähköntuotannossa tuo omat haasteensa tehotasapainon ylläpitoon. Eniten käytettyjen uusiutuvien energialähteiden, eli aurinko- ja tuulivoiman, tuotanto riippuu voimakkaasti säästä ja vuorokaudenajasta. Kasvava vaihtelevien energialähteiden käyttö luo entisestään tarvetta säätövoimalle. Säätövoima on kuitenkin huomattavasti kalliimpaa, eikä säätövoimaksi hyvin soveltuvaa vesivoimaa ole tarjolla määrättömästi. Myöskään sähköenergian varastointia ei nähdä vielä ratkaisuna uusiutuvan sähköntuotannon vaihteluihin.  Sähkön tuotanto on muuttumassa vähemmän joustavaksi. \marginpar{Huippu teho voiman ongelmat}
+
+  YKsi tapa ratkaista sähköntuotannon joustamattomuuden aiheuttamia engelmia on kysyntäjousto, jossa tuotannon sijasta säädellään sähkön kulutusta reaaliajassa, etukäteen tehdyn suunnitelman mukaan tai ohjaamalla kuluttajaa tiettyihin valintoihin. Kysyntäjoustoa voidaan toteuttaa monella tapaa. Yksi tapa on ohjata sähkön kulutusta hinnoittelun avulla. Tuntihinnoitellun sähkön hintaa kuluttajalle säädellään tuotannon ja kulutuksen mukaan, suurimman hinnan osuessa suurimman kulutuksen ajalle. Äärimmäisin esimerkki kulutusjoustosta on kantaverkkoyhtiö Fingridin toteuttama sähkön kulutuksen alentaminen katkaisemalla jännite tietyiltä alueilta. Viimeisenä mainittua kulutuksen rajoittamista ei kuitenkaan tarvita, mikäli sähköverkossa ei ole suurta vikaa.
+
+  Sähköverkossa olevilla suurilla yhtenäisillä kuormilla, joiden kulutusta pystytään ohjaamaan, voidaan toteuttaa kysyntäjoustoa. Suomessa on käytössä noin miljoona (vuonna 2019) lämpöpumppua. Mikäli lämöpumpun keskimääräiseksi sähkötehoksi käytön aikana arvioidaan esimerkiksi \SI{1}{\kilo\watt}, tulee niiden yhteistehoksi \SI{1}{\giga\watt}. Tämä vastaa noin yhtä neljästoista koko Suomen sähkökulutuksesta kovimman sähkönkulutuksen aikaan. \marginpar{tarkkuutta tähän} Suurimman lämmitystehontarpeen aikana saatetaan myöskin käyttää lämpöpumpun yhteyteen asennettua lisälämmitysvastusta, jolloin yksittäisen lämpöpumpun sähköteho nousee selvästi.
 
 \subsection{Virtuaalivoimalat}
 
+  Virtuaalivoimala on yksi tapa toteuttaa kysyntäjoustoa. Virtuaalivoimala koostuu yhdestä suuresta tai useammasta pienestä kuormasta, joiden tehonkulutusta ohjataan yhtenä yksikkönä. Virtaalivoimalan omistaja myy sähkömarkkinoille joustokapasiteettia. Suuren sähkönkulutuksen aikana kantaverkkoyhtiö maksaa virtuaalivoimalaoperaattorille siitä, että voimalaan kuuluvissa kiinteistöissä tai muissa kulutuskohteissa vähennetään sähkön käyttöä hetkellisesti. Vastaavasti ylituotantotilanteessa kantaverkkoyhtiö voi ostaa virtuaalivoimalalta kulutusta vastaamaan sen hetkistä tuotantoa. Reservimarkkinoiden hinnat siis määrävät virtuaalivoimalasta saatavan taloudellisen hyödyn. Ostamaansa joustokapasiteettia kantaverkkoyhtiö Fingrid käyttää sähköenergiajärjestelmän tehotasapainon hallintaan.
+
+  Virtuaalivoimalan ohjaus tapahtuu automaattisesti ja sitä voidaan ohjata esimerkiksi sähköverkon taajuuden mukaan.
+
+  Osa virtaaalivoimalan ympäristömerkityksestä koostuu siitä, ettei erillistä sähköntuotantolaitteistoa tarvitse rakentaa, vaan toiminta perustuu olemassa olevan tai tarpeeseen rakennettavan laitteiston lisähyödyntämiseen. Myöskin verkkoonliittymisvaatimukset ovat erilaiset. \marginpar{millä lailla? vai onko?}
+
+  Virtuaalivoimala voidaan koostaa kohteista, joissa energiaa saadaan varastoitua väliaikaisesti. Energiaa voidaan varastoida käyttökohteessa esimerkiksi akkuihin, josta esimerkkinä toimii kauppakeskus Sellon virtuaalivoimala Espoossa. Myöskin sähköautojen akkuja voidaan käyttää energian varastointiin, tällöin puhutään V2G-tekniikasta. Mikäli energiaa varastoidaan itsenäisesti toimivaan suureen akustoon, tai esimerkiksi paineilmavoimalaitokseen tai pumppuvoimalaitokseen, puhutaan silloin yleensä sähköenergian varastoinnista, eikä virtuaalivoimalasta. Virtuaalivoimalalle ominaista on siis nimenomaan kulutusjouston myyminen, ei niinkään enrgian.
+
+  Energiaa saadaan varastoitua myös lämmitysjärjestelmiin. Virtuaalivoimalan toimiessa osana lämmitysjärjestelmää, käytetään esimerkiksi lämminvesivaraajaa, sisäilmaa tai kiinteistöä itseään energiavarastona. Kun Virtuaalivoimalaa käytetään kompensoimaan alituotantoa, kytketään lämpöpumppu, lämmitysvastus tai muu vastaava sähköä kuluttava toiminta pois päältä. Lämmityslaitteiden poiskytkemisaika on yleensä maksimissaa muutamia tunteja, minkä ansiosta lämmitettävä kiinteistö tai kohde ei ehdi jäähtymään merkittävästi, eikä esimerkiksi asumismukavuudesta tarvitse tinkiä. Kun taas kompensoidaan ylituotantoa, voidaan esimerkiksi lämpöpumppuja käyttää maksimitehollaan, kunnes lämminvesivaraaja, kiertovesi tai sisäilma saavuttaa asetetun maksimilämpötilansa. Lämpöpupoujen kompressorien lisäksi myös lisälämmitysvastuksia voidaan käyttää, jolloin käytetty sähköteho saatta olla jopa kaksinkertainen.\marginpar{tarkasta}
+
+\subsection{huipputehon rajoittaminen}
+
+  Osa sähköenergiajärjestelmän kuluista ja päästöistä aiheutuu siirtoverkon rakentamisesta ja ylläpidosta. Rakennettaessa uutta yhteyttä, mitoitetaan sen sähkönsiirtokyky arvioidun mahdollisen huipputehon mukaan. Suurimman osan ajasta siirtojohdot ovat kuormitettuina huomattavasti mitoituskantokykyään pienemmällä kuormalla. 
 
 \subsection{Mahdolliset haittavaikutukset}
