--- a/main.tex
+++ b/main.tex
@@ -105,7 +105,7 @@
 
 %%%%% Thesis information and title page.
 
-\title{Lämpöpumppujen ja aurinkoinventtereiden kommunikaatiorajapinnat ja niiden hyödyntämismahdollisuudet}
+\title{Lämpöpumppujen ja aurinkosähköjärjestelmien kommunikaatiorajapinnat ja niiden hyödyntämismahdollisuudet}
 \subtitle{Luonnos: versio 3}
 
 % The author name.
