--- a/tex/sovellukset.tex
+++ b/tex/sovellukset.tex
@@ -18,7 +18,7 @@ Lämpöpumppujen kommunikaatiorajapintoja voidaan hyödyntää useaan eri tarkoi
 
   kommunikointi lämpöpumpun ja asiakkaan päätelaitteen, joka voi olla esimerkiksi puhelin tai tietokone, voi tapahtua monella erilaisella tavalla. Monet lämpöpumppuvalmistajat \marginpar{etsi joku} tarjoavat lämpöpumppuihinsa lisäpalveluna etäohjaustoiminnallisuutta, joka näyttäytyy käyttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. \marginpar{taloautomaatiokappale} Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suurempaa perehtymistä tai asiantuntemusta.
 
-  Lämpöpumpun etäohjaus voidaan toteuttaa myös itse, mikä vaatii käyttäjältä enemmän asiantuntemusta. Tällöin pitää ohjattavan lämpöpumpun tarjota jokin ohjausrajapinta, esimerkiksi modBUS-väylä tai vastaava, \marginpar{mikä helvetti} tai vähintäänkin lämpöpumpun pitää tukea tämän mahdollistavaa laajennusta. Käyttäjän pitää itse toteuttaa ainakin ohjauslogiikka, käyttöliittymä ja päättää minkälaista palvelinta haluaa ylläpitää näiden mahdollistamiseksi.
+  Lämpöpumpun etäohjaus voidaan toteuttaa myös itse, mikä vaatii käyttäjältä enemmän asiantuntemusta. Tällöin pitää ohjattavan lämpöpumpun tarjota jokin ohjausrajapinta, esimerkiksi modBUS-väylä tai vastaava, \marginpar{tarkennusta} tai vähintäänkin lämpöpumpun pitää tukea tämän mahdollistavaa laajennusta. Käyttäjän pitää itse toteuttaa ainakin ohjauslogiikka, käyttöliittymä ja päättää minkälaista palvelinta haluaa ylläpitää näiden mahdollistamiseksi.
 
   Yksittäisen lämpöpunpun ohjauksella saavutettavat hyödyt ovat lähinnä yksittäissen omakotitalokäyttäjän saavuttamia säästöjä tai vastaavasti teollisuudessa tapahtuvaa järjestelmien hallinnasta saavutettavia etuja. Merkittävämmät lämpöpumppujen rajapintoja hyödyntävät sovellukset koskevat hyödyt saavutetaan, kun ohjattavia lämpöpumppuja on useampia.
 
@@ -44,10 +44,26 @@ Lämpöpumppujen kommunikaatiorajapintoja voidaan hyödyntää useaan eri tarkoi
 
   Virtuaalivoimala voidaan koostaa kohteista, joissa energiaa saadaan varastoitua väliaikaisesti. Energiaa voidaan varastoida käyttökohteessa esimerkiksi akkuihin, josta esimerkkinä toimii kauppakeskus Sellon virtuaalivoimala Espoossa. Myöskin sähköautojen akkuja voidaan käyttää energian varastointiin, tällöin puhutään V2G-tekniikasta. Mikäli energiaa varastoidaan itsenäisesti toimivaan suureen akustoon, tai esimerkiksi paineilmavoimalaitokseen tai pumppuvoimalaitokseen, puhutaan silloin yleensä sähköenergian varastoinnista, eikä virtuaalivoimalasta. Virtuaalivoimalalle ominaista on siis nimenomaan kulutusjouston myyminen, ei niinkään enrgian.
 
-  Energiaa saadaan varastoitua myös lämmitysjärjestelmiin. Virtuaalivoimalan toimiessa osana lämmitysjärjestelmää, käytetään esimerkiksi lämminvesivaraajaa, sisäilmaa tai kiinteistöä itseään energiavarastona. Kun Virtuaalivoimalaa käytetään kompensoimaan alituotantoa, kytketään lämpöpumppu, lämmitysvastus tai muu vastaava sähköä kuluttava toiminta pois päältä. Lämmityslaitteiden poiskytkemisaika on yleensä maksimissaa muutamia tunteja, minkä ansiosta lämmitettävä kiinteistö tai kohde ei ehdi jäähtymään merkittävästi, eikä esimerkiksi asumismukavuudesta tarvitse tinkiä. Kun taas kompensoidaan ylituotantoa, voidaan esimerkiksi lämpöpumppuja käyttää maksimitehollaan, kunnes lämminvesivaraaja, kiertovesi tai sisäilma saavuttaa asetetun maksimilämpötilansa. Lämpöpupoujen kompressorien lisäksi myös lisälämmitysvastuksia voidaan käyttää, jolloin käytetty sähköteho saatta olla jopa kaksinkertainen.\marginpar{tarkasta}
+  Energiaa saadaan varastoitua myös lämmitysjärjestelmiin. Virtuaalivoimalan toimiessa osana lämmitysjärjestelmää, käytetään esimerkiksi lämminvesivaraajaa, sisäilmaa tai kiinteistöä itseään energiavarastona. Kun Virtuaalivoimalaa käytetään kompensoimaan alituotantoa, kytketään lämpöpumppu, lämmitysvastus tai muu vastaava sähköä kuluttava toiminta pois päältä. Lämmityslaitteiden poiskytkemisaika on yleensä maksimissaa muutamia tunteja, minkä ansiosta lämmitettävä kiinteistö tai kohde ei ehdi jäähtymään merkittävästi, eikä esimerkiksi asumismukavuudesta tarvitse tinkiä. Kun taas kompensoidaan ylituotantoa, voidaan esimerkiksi lämpöpumppuja käyttää maksimitehollaan, kunnes lämminvesivaraaja, kiertovesi tai sisäilma saavuttaa asetetun maksimilämpötilansa. Lämpöpuppujen kompressoreiden lisäksi myös lisälämmitysvastuksia voidaan käyttää, jolloin käytetty sähköteho saatta olla jopa kaksinkertainen.\marginpar{tarkasta}
 
 \subsection{huipputehon rajoittaminen}
 
-  Osa sähköenergiajärjestelmän kuluista ja päästöistä aiheutuu siirtoverkon rakentamisesta ja ylläpidosta. Rakennettaessa uutta yhteyttä, mitoitetaan sen sähkönsiirtokyky arvioidun mahdollisen huipputehon mukaan. Suurimman osan ajasta siirtojohdot ovat kuormitettuina huomattavasti mitoituskantokykyään pienemmällä kuormalla. 
+  Osa sähköenergiajärjestelmän kuluista ja päästöistä aiheutuu siirtoverkon rakentamisesta ja ylläpidosta. Rakennettaessa uutta yhteyttä, mitoitetaan sen kuormitettavuus eli sähkönsiirtokyky arvioidun mahdollisen huipputehon mukaan. Suurimman osan ajasta siirtojohdot ovat siis kuormitettuina huomattavasti mitoitustaan pienemmällä kuormalla.
 
-\subsection{Mahdolliset haittavaikutukset}
+  Rajoittamalla johdolla syötetyn alueen huipputehoja, saatetaan välttää uusien yhteyksien rakentaminen. Siirtojohdolla tapahtuvat jännitehäviöt ovat myös suurimmillaan suurimman tehonkulutuksen aikana, joten rajoittamalla huipputehoja, pystytään alentamaan johdolla tapahtuvia häviöitä.
+
+  Sopivan lämpöpumppupoolin ohjauksella voidaan alentaa muuntopiirin tai syötetyn alueen huipputehoa. Riippuen alueesta, lämpöpumput ovat hyvä valinta ohjattavaksi kuormaksi. Uusilla rakennettavilla asuinaueilla, missä kaukolämpö ei ole käytössä, on todennäköisesti suurimmassa osassa asuinrakennuksia lämpöpumppu. Myöskin vanhaa rakennuskantaa peruskorjattaessa lämpöpumput valitaan usein lämmitysjärjestelmän osaksi. Normaalissa omakotitalossa lämpöpumppu on todennäköisesti suurin yksittäinen sähköä kuluttava laite, mikä tekee siitä edelleen hyvän valinnan ohjattavaksi kuormaksi.
+
+  Lämpöpumppupoolin ohjuksesta on myös hyötyä hieman pidemmän sähkökatkon yhteydessä. Sähkökatkon kestäessä hieman pidempään, kylmenevät lämpöpumppujen lämmittämät kohteet. Näin ollen sähköjen palatessa, käytännössä kaikki muuntopiirin lämpöpumput käynnistyvät samaan aikaan. Mikäli kaikki tai osa lämpöpumpuista on varustettu suoraan verkkojännitteeseen kytketyllä oikosulkumoottorilla, voi niiden yhteenlaskettu käynnistysvirtapiikin aikainen tehon kulutus olla huomattavan korkea. Mikäli lämpöpumppujen rajapinnat mahdollistavat yksittäisten lämpöpumppujen ohjaamisen keskitetysti, voidaan sähköjen takaisinkytkeytymisen aiheuttamaan kulutuspiikkiä tasoittaa.
+
+  Voidaan myös ajatella, etteivät lämpöpumput ole kaikkein kriittisimpiä syötettviä kohteita. Mikäli sähköpulan takia on tarpeen rajoittaa kulutusta, on hyvä, jos kuitenkin pystytään takaamaan kriittiset toiminnot, kuten valaistus, kunnallistekniikan toiminta tai kylmälaitteiden käynti. Suomessa useimmissa omakotitaloissa on kuitenkin edelleen tulisija, jolloin lämpöpumppujen jatkuva päälläolo ei ole välttämätöntä lyhyllä, muutaman vuorokauden aikaväleillä. Mikäli sähköpulan aikana voidaan keskitetysti rajoittaa lämpöpuppujen käyttöä, saateetaan vähentää tarvetta alueiden kokonaan jännitteettömiksi kytkemiseen.
+
+\section{Mahdolliset haittavaikutukset}
+
+  Rajapinnat ja niitä hyödyntävät sovellukset tuovat haasteita ja mahdollisia haittavaikutuksia. Kuten monesti uuden tekniikan käyttöönottoon liittyy, turvallisuusnäkökulma saattaa jäädää huomioimatta. Osa haittavaikutuksista saattaa taas ilmetä vasta testattaessa tekniikoita käytännössä tai kun niiden käyttö alkaa olemaan laajalle levinnyttä.
+
+  Lämpöpumppuja kytketään verkkoon, jotta käyttäjät voivat etäohjata sitä tai jotta sitä voidaan ohjata agregaattorin toimesta osana lämpöpumppupoolia. Erään riskityypin muodostavat vahingosa tai huolimattomuuttaan avoimeksi jätetyt ohjausrajapinnat. TCP-portteja voi olla avoinna niin, että kolmas osapuoli voi koittaa avata telnet- tai ssh-yhteyksiä laitteeseen. Mikäli yhteyden saa avattua käyttäen vakiokäyttäjätunnuksia ja -salasanoja,  tai mahdollisesti täysin ilman tunnistautumista, ovat laitteet käytämmössä kenen tahansa käytettävissä. Mikäli laitteisiin otetaan yhteyttä salaamattomilla protokollilla, voidaan ohjausliikenteestä urkkia tietoja, joiden päätytminen ulkopuolisten korviin ei ole hyvä juttu. Mahdollisia urkittavia asioita voi olla esimerkiksi asukkaan läsnäolo tai tieto peseytymisajoista, joiden vuotaminen ulkopuolisille voi vaikuttaa vähintääkin turvallisuudentunteeseen.
+
+  Kaapattujen eli luvatta etäohjattujen laitteiden väärinkäyttöön on monia tapoja. Pumppujen voidaan esimerkiksi ohjata tuottamaan omistajilleen ylimääräisiä kuluja tai vaihtamaan asunnon lämpötila täysin vääräksi. Mikäli lämpöpumpun yhteydessä on sulautettuna järjestelmänä esimerkiksi jokin linux- tai windows-käyttöjärjestelmä ohjaamassa pumpun toimintaa, pätevät siihen samat uhkakuvat kuin normaalin kotitietokoneen haltuunnottamiseen. Mikäli kolmas osapuoli kykenee asentamaan lämpöpumppua ohjaavaan tietokoneeseen omia ohjelmiaan, sitä voidaan käyttää vahingollisiin tarkoituksiin, esimerkiksi hajautetun palvelunestohyökkäyksen toteuttamisessa. Mikäli kolmannella osapuolella on mahdollisuus käyttää useampaa laitetta yhtäaikaa voidaa laitteita käyttää esimerkiksi häiriöiden tuottamiseen sähköverkossa, eli tuottamaan lisää niitä ongelmia, joiden ratkaisemiseen rajapintojen hyödyntämisellä pyritään.
+
+  Ihmisen turvalisuuden tunnetta lisää, kun hänellä on tunne siitä, että asioita voi kontrolloida itse. Kun Lämpöpumpun ohjausta halutaa siirtää älykkäässä sähköverkossa kolmansille osapuolille kuten agregaattoreille, tämä turvallisuuden tunne saattaa horjua.
