--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -1,12 +1,3 @@
-@online{bibmanagement,
-title={\LaTeX/Bibliography Management},
-subtitle={biblatex},
-date={2018-07-12},
-url={https://en.wikibooks.org/w/index.php?title=LaTeX/Bibliography_Management&stable=1},
-urldate={2018-12-27},
-label={\LaTeX{} WikiBook}
-}
-
 @online{kummu,
 author = "Kummu, Jussi",
 title={Lämpöpumput},
@@ -129,4 +120,17 @@ language = {fin},
 organization = {Tampereen ammattikorkeakoulu},
 publisher = {Sähköinfo Oy},
 title = {Kysyntäjousto edistää uusiutuvaa sähköntuotantoa},
+}
+
+@online{modbusOrg,
+organization = {Modbus Organization},
+title={Modbus FAQ},
+url={https://modbus.org},
+urldate={2020-08-06}
+}
+
+@techreport{modbusSpec,
+institution = {Modbus Organization},
+title={MODBUS Application Protocol Specification V1.1b3},
+type = {Standard}
 }
