Kiva kuva asiakas-palvelin-mallista

--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -124,13 +124,43 @@ title = {Kysyntäjousto edistää uusiutuvaa sähköntuotantoa},
 
 @online{modbusOrg,
 organization = {Modbus Organization},
-title={Modbus FAQ},
+title={Modbus Website and FAQ},
 url={https://modbus.org},
 urldate={2020-08-06}
 }
 
-@techreport{modbusSpec,
+@techreport{modbusAppSpec,
 institution = {Modbus Organization},
 title={MODBUS Application Protocol Specification V1.1b3},
 type = {Standard}
+}
+
+@techreport{modbusSerialSpec,
+institution = {Modbus Organization},
+title={MODBUS over Serial Line Specification and Implementation Guide V1.02},
+url={https://modbus.org/specs.php},
+type = {Standard}
+}
+
+@techreport{modbusTCPIPSpec,
+institution = {Modbus Organization},
+title={MODBUS MESSAGING ON TCP/IP IMPLEMENTATION GUIDE V1.0b},
+url={https://modbus.org/specs.php},
+type = {Standard}
+}
+
+@techreport{osi,
+institution = {International Telecommunication Union},
+title={INFORMATION TECHNOLOGY – OPEN SYSTEMS INTERCONNECTION -- BASIC REFERENCE MODEL: THE BASIC MODEL},
+url={https://www.itu.int/rec/T-REC-X.200},
+type = {Standard}
+}
+
+@online{seCom,
+organization = {Schneider Electric},
+title={Schneider Electric website},
+url={https://www.se.com},
+urldate={2020-08-06},
+note={\href{https://www.se.com/us/en/product-range-presentation/576-modbus-plus}{\underline{Modbus Plus}},
+      \href{https://www.se.com/ca/en/faqs/FA198221/}{\underline{differenses to Modbus}}}
 }
