--- a/tex/sanasto.tex
+++ b/tex/sanasto.tex
@@ -38,7 +38,12 @@
   description={Remote Terminal Unit}
 }
 
-\newglossaryentry{APDU}{
-  name={APDU},
-  description={application layer protocol data unit}
+\newglossaryentry{PDU}{
+  name={PDU},
+  description={protocol data unit}
+}
+
+\newglossaryentry{ADU}{
+  name={ADU},
+  description={application data unit, tunnetaan myös nimellä APDU, eli Application Protocol Data Unit}
 }
